--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==3.7.1
 arabic-reshaper==3.0.0
 asgiref==3.7.2
 asn1crypto==1.5.1
+astroid==2.5.3
 cached-property==1.5.2
 certifi==2023.7.22
 cffi==1.16.0
@@ -11,21 +12,31 @@ charset-normalizer==3.3.0
 click==8.1.7
 colorama==0.4.6
 crispy-bootstrap5==0.7
+crispy-tailwind==1.0.3
 cryptography==42.0.5
 cssselect2==0.7.0
 defusedxml==0.8.0rc2
+dj-stripe==2.6.3
 Django==3.2.22
 django-allauth==0.51.0
+django-appconf==1.0.5
 django-ckeditor==6.3.2
+django-cleanup==8.1.0
 django-countries==7.5.1
 django-crispy-forms==2.0
 django-js-asset==2.0.0
 exceptiongroup==1.1.3
+future==0.18.2
 html5lib==1.1
 idna==3.4
 importlib-metadata==6.7.0
+isort==5.8.0
+jsonfield==3.1.0
 kombu==5.2.4
+lazy-object-proxy==1.6.0
 lxml==5.2.1
+mccabe==0.6.1
+numpy==1.23.4
 oauthlib==3.2.2
 oscrypto==1.3.0
 pillow==10.3.0
@@ -33,25 +44,34 @@ pycparser==2.21
 pyHanko==0.23.2
 pyhanko-certvalidator==0.26.3
 PyJWT==2.8.0
+pylint==2.7.4
 pypdf==4.1.0
 PyPDF2==3.0.1
+PyPDF3==1.0.6
 pypng==0.20220715.0
 python-bidi==0.4.2
+python-decouple==3.8
 python3-openid==3.2.0
 pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0.1
 qrcode==7.4.2
 reportlab==4.0.9
 requests==2.31.0
 requests-oauthlib==1.3.1
+scipy==1.11.4
 six==1.16.0
 sniffio==1.3.0
 social-auth-app-django==5.3.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
 starlette==0.29.0
+stripe==4.2.0
 svglib==1.5.1
 tinycss2==1.2.1
+toml==0.10.2
+tqdm==4.64.1
+types-cryptography==3.3.23
 typesystem==0.4.1
 typing_extensions==4.7.1
 tzdata==2024.1
@@ -62,6 +82,6 @@ uritools==4.0.2
 urllib3==1.26.6
 vine==5.0.0
 webencodings==0.5.1
+wrapt==1.12.1
 xhtml2pdf==0.2.15
 zipp==3.15.0
-django-cleanup==8.1.0
