--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ cryptography==42.0.5
 cssselect2==0.7.0
 defusedxml==0.8.0rc2
 dj-stripe==2.6.3
-Django==3.2.22
+Django>=4.2,<5.0
 django-allauth==0.51.0
 django-appconf==1.0.5
 django-ckeditor==6.3.2
